crud reclamation et interface